baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_method_explicit_type_args/method_explicit_type_args.fmt.snap
---
source: crates/baml_tests/src/corpus.rs
---
class Foo {
    tag: string,
    function zero<T>(self) -> T? {
        null
    }
}

function use_method_type_args() -> int {
    let f = Foo { tag: "x" };
    let v: int = f.zero<int>() ?? 5;
    v
}
