baml_language/crates/baml_tests/snapshots/baml_src/ns_fixtures/ns_method_explicit_type_args/mir.snap
---
source: crates/baml_tests/src/corpus.rs
---
=== MIR2 ===
fn user.fixtures.method_explicit_type_args.Foo.zero(self: fixtures.method_explicit_type_args.Foo) -> null | T {
    // Locals:
    let _0: null | T // _0 // return
    let _1: fixtures.method_explicit_type_args.Foo // self // param

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.fixtures.method_explicit_type_args.use_method_type_args() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: fixtures.method_explicit_type_args.Foo // f
    let _2: int // v
    let _3: int
    let _4: int | null
    let _5: type
    let _6: bool

    bb0: {
        _1 = user.fixtures.method_explicit_type_args.Foo { const "x" };
        _5 = load_type(int);
        _4 = call const fn user.fixtures.method_explicit_type_args.Foo.zero<copy _5>(copy _1) -> [bb1];
    }

    bb1: {
        _3 = copy _4;
        _6 = copy _3 == const null;
        branch copy _6 -> [bb2, bb3];
    }

    bb2: {
        _3 = const 5_i64;
        goto -> bb3;
    }

    bb3: {
        _2 = copy _3;
        _0 = copy _2;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}
